src/objects/District__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>HYPERLINK(Id, State_Name__r.Country_Name__r.Name&amp; &apos;=&gt;&apos; &amp;State_Name__r.Name&amp; &apos;=&gt;&apos; &amp;Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Pin_Code__c</fullName>
        <label>District Pin Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Name</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>